Moving the LocBaml.exe file into the build tools folder.  Updated the build to automatically produce a LocalizationFile.csv file into the target folder when building Release.  This file can be sent of to localization teams and then generated into a DLL (details on the wiki at https://github.com/DirtyPiece/dancestudio/wiki/Localization).

--- a/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
+++ b/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
@@ -17,6 +17,7 @@
     <UICulture>en-US</UICulture>
     <DanceStudioShouldRunDoxygen>true</DanceStudioShouldRunDoxygen>
     <DanceStudioShouldGenerateUids>true</DanceStudioShouldGenerateUids>
+    <DanceStudioShouldGenerateLocalizationFile>true</DanceStudioShouldGenerateLocalizationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
