--- a/Source/Windows/DanceStudio/DanceStudio.Controller/DanceStudio.Controller.csproj
+++ b/Source/Windows/DanceStudio/DanceStudio.Controller/DanceStudio.Controller.csproj
@@ -50,6 +50,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(ProjectDir)..\..\..\..\Build\Targets\DanceStudio.Targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
