Added some more logging implementation.  Added the C++/CLI wrapper for the logger functionality.

--- a/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MarshalHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NativeUniquePointer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
