Fixing up the paths and references for the Windows solution after moving DanceStudio.Core on the Mac into a common folder.  Also cleaned up some warnings from cpplint.

--- a/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj
@@ -54,6 +54,8 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -65,6 +67,8 @@
       <WarningLevel>Level4</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -101,7 +105,7 @@
     <Image Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DanceStudio.Core\DanceStudio.Core.vcxproj">
+    <ProjectReference Include="..\..\..\Common\DanceStudio.Core\DanceStudio.Core.vcxproj">
       <Project>{2ab9cc54-a705-4bb7-8d6e-77c409fb10ed}</Project>
     </ProjectReference>
   </ItemGroup>
