--- a/Source/Windows/DanceStudio/DanceStudio.Core.UnitTests/DanceStudio.Core.UnitTests.vcxproj
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.UnitTests/DanceStudio.Core.UnitTests.vcxproj
@@ -53,7 +53,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\DanceStudio.Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\..\Common\DanceStudio.Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
@@ -70,7 +70,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\DanceStudio.Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\..\Common\DanceStudio.Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
@@ -95,7 +95,7 @@
     <ClCompile Include="PathHelperTests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DanceStudio.Core\DanceStudio.Core.vcxproj">
+    <ProjectReference Include="..\..\..\Common\DanceStudio.Core\DanceStudio.Core.vcxproj">
       <Project>{2ab9cc54-a705-4bb7-8d6e-77c409fb10ed}</Project>
     </ProjectReference>
   </ItemGroup>
