Adding the start of the StepChartEditor class in the core library.

--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj.filters
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj.filters
@@ -13,33 +13,60 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Public Interface">
+      <UniqueIdentifier>{87451b63-5c9f-4b79-a6e6-be712be2860f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Internal">
+      <UniqueIdentifier>{b2a55f93-d76a-4ad0-af43-b2dca4fafd3c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Public Interface">
+      <UniqueIdentifier>{d0da4a5e-fa32-415c-9474-ac1da3e4fc60}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Internal">
+      <UniqueIdentifier>{37a98a62-a513-4c52-a49c-7c1f11c8c36b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Logger.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Typedefs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PathHelper.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="DanceStudio.Core.h">
+      <Filter>Header Files\Public Interface</Filter>
     </ClInclude>
     <ClInclude Include="Constants.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="Logger.h">
+      <Filter>Header Files\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="PathHelper.h">
+      <Filter>Header Files\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="Stdafx.h">
+      <Filter>Header Files\Internal</Filter>
     </ClInclude>
     <ClInclude Include="Validator.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Internal</Filter>
+    </ClInclude>
+    <ClInclude Include="Typedefs.h">
+      <Filter>Header Files\Public Interface</Filter>
+    </ClInclude>
+    <ClInclude Include="StepChartEditor.h">
+      <Filter>Header Files\Internal</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DanceStudio.Core.Logger.cpp">
+      <Filter>Source Files\Public Interface</Filter>
+    </ClCompile>
+    <ClCompile Include="DanceStudio.Core.StepChartEditor.cpp">
+      <Filter>Source Files\Public Interface</Filter>
+    </ClCompile>
     <ClCompile Include="Logger.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Internal</Filter>
     </ClCompile>
     <ClCompile Include="PathHelper.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Internal</Filter>
+    </ClCompile>
+    <ClCompile Include="StepChartEditor.cpp">
+      <Filter>Source Files\Internal</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
