--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
@@ -51,6 +51,9 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <Lib>
+      <AdditionalDependencies>OpenGL32.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -67,18 +70,26 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <Lib>
+      <AdditionalDependencies>OpenGL32.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="DanceStudio.Core.h" />
     <ClInclude Include="PathHelper.h" />
     <ClInclude Include="Stdafx.h" />
+    <ClInclude Include="StepChartEditor.h" />
     <ClInclude Include="Typedefs.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Validator.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DanceStudio.Core.Logger.cpp" />
+    <ClCompile Include="DanceStudio.Core.StepChartEditor.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="PathHelper.cpp" />
+    <ClCompile Include="StepChartEditor.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="$(ProjectDir)..\..\..\Build\Targets\DanceStudio.Targets" />
