--- a/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj
@@ -145,6 +145,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ExceptionHelper.h" />
     <ClInclude Include="EXCEPTION_POINTERS.h" />
     <ClInclude Include="EXCEPTION_RECORD.h" />
     <ClInclude Include="Logger.h" />
@@ -157,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="ExceptionHelper.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
