--- a/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="EXCEPTION_RECORD.h">
       <Filter>Interop</Filter>
     </ClInclude>
+    <ClInclude Include="ExceptionHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StepChartEditor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExceptionHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
