--- a/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.Cli/DanceStudio.Core.Cli.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="StepChartEditor.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Throw.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
