--- a/Source/Windows/DanceStudio/DanceStudio.Core.UnitTests/DanceStudio.Core.UnitTests.vcxproj
+++ b/Source/Windows/DanceStudio/DanceStudio.Core.UnitTests/DanceStudio.Core.UnitTests.vcxproj
@@ -91,12 +91,16 @@
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;..\..\..\Common\DanceStudio.Core;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
